chore: fix chip group alignment

--- a/apps/researcher-client/design-system/components/chip-group/style.module.scss
+++ b/apps/researcher-client/design-system/components/chip-group/style.module.scss
@@ -1,6 +1,13 @@
 @import "apps/researcher-client/styles/global";
 
-.chip-group {
+.chipGroup {
+  width: fit-content;
+  flex-wrap: wrap;
   display: flex;
-  background: red;
+  align-items: center;
+  justify-content: center;
+
+  > * {
+    margin: 0 $sm;
+  }
 }
